--- a/templates/index.html
+++ b/templates/index.html
@@ -17,10 +17,10 @@
                     <span class="conditions">&#xf00d;</span>
                     <div class="info">
                         <span class="humidity">
-                            {% if humidity %}{{ humidity }}%{% else %}No humidity data available{% endif %}
+                            {% if humidity %}{{ humidity }}%{% else %}No data{% endif %}
                         </span>
                         <span class="wind">
-                            {% if wind_speed %}{{ wind_speed }} m/s{% else %}No wind data available{% endif %}
+                            {% if wind_speed %}{{ wind_speed }} m/s{% else %}No data{% endif %}
                         </span>
                     </div>
                 </div>
