working on this bs

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,7 @@
                         </span>
                         <span class="wind">
                             {% if wind_speed %}{{ wind_speed }} m/s{% else %}No data{% endif %}
+                            <?php?>
                         </span>
                     </div>
                 </div>
