--- a/WeatherAPP_Project/WeatherAPP/templates/index.html
+++ b/WeatherAPP_Project/WeatherAPP/templates/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="../static/style.css">
+        <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
         <title>Weather app</title>
     </head>
     <body>
