adding background image

--- a/WeatherAPP_Project/WeatherAPP/templates/index.html
+++ b/WeatherAPP_Project/WeatherAPP/templates/index.html
@@ -7,6 +7,12 @@
         <title>Weather app</title>
     </head>
     <body>
+        <!-- This is temporary TODO: make it work in css file :v -->
+        <style>
+            body {
+                background-image: url("{% static 'images/background.jpg' %}");
+            }
+        </style>
         <div id="weather_wrapper">
             <div class="weatherCard">
                 <div class="currentTemp">
