--- a/WeatherAPP_Project/WeatherAPP/static/css/style.css
+++ b/WeatherAPP_Project/WeatherAPP/static/css/style.css
@@ -1,6 +1,12 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,700);
 @import url(https://cdnjs.cloudflare.com/ajax/libs/weather-icons/1.2/css/weather-icons.min.css);
 
+/* Need this one to make sure that app is fitting into whole screen */
+html {
+  height: 100%;
+  width: 100%;
+}
+
 #weather_wrapper{
   width: 400px;
   margin: 100px auto;
