--- a/WeatherAPP_Project/WeatherAPP/templates/index.html
+++ b/WeatherAPP_Project/WeatherAPP/templates/index.html
@@ -11,6 +11,8 @@
         <style>
             body {
                 background-image: url("{% static 'images/background.jpg' %}");
+                background-size: 100% 100%;
+                background-repeat: no-repeat;
             }
         </style>
         <div id="weather_wrapper">
