--- a/WeatherAPP_Project/WeatherAPP/static/css/style.css
+++ b/WeatherAPP_Project/WeatherAPP/static/css/style.css
@@ -1,3 +1,4 @@
+/* Weather icons*/
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,700);
 @import url(https://cdnjs.cloudflare.com/ajax/libs/weather-icons/1.2/css/weather-icons.min.css);
 
@@ -5,6 +6,11 @@
 html {
   height: 100%;
   width: 100%;
+}
+
+/* This is to make sure that body has no background color */
+body {
+  background-color: transparent;
 }
 
 #weather_wrapper{
