--- a/WeatherAPP_Project/WeatherAPP/templates/index.html
+++ b/WeatherAPP_Project/WeatherAPP/templates/index.html
@@ -9,10 +9,9 @@
     <body>
         <!-- This is temporary TODO: make it work in css file :v -->
         <style>
-            body {
+            html {
                 background-image: url("{% static 'images/background.jpg' %}");
-                background-size: 100% 100%;
-                background-repeat: no-repeat;
+                background-size: 100%;
             }
         </style>
         <div id="weather_wrapper">
